--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,80 @@
 /*
-  Tady nic není, ale by být mělo.
-  Sem vlož CSS z html-vzoru, které je společné pro celou aplikaci
+  Společná část CSS
+  Tu vlož do hlavního style.css společného pro celou aplikaci
 */
+/*
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Playfair+Display:wght@700&display=swap');
+*/
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@300;400;700&display=swap');
+
+html {
+  box-sizing: border-box;
+}
+
+*, ::before, ::after {
+  box-sizing: inherit;
+}
+
+body {
+  font-family: 'Poppins', sans-serif;
+	font-weight: 300;
+	font-size: 18px;
+	line-height: 1.5;
+	color: #333232;
+  background: #fff9f1;
+}
+
+h1, h2, h3, h4, h5, h6 {
+	font-family: 'Playfair Display', serif;
+}
+
+.container {
+  max-width: 900px;
+  margin: 0 auto;
+}
+
+.products {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	gap: 30px;
+}
+
+
+
+
+/*
+  ------------------
+  HEADER
+  ------------------
+*/
+.header {
+	display: flex;
+	align-items: center;
+	margin: 30px 0 80px 0;
+	color: #fcf0e1;
+	background: #5c5753;
+}
+
+.header__title {
+	margin: -15px 20px -15px 20px;
+	padding: 15px 20px;
+	color: #fcf0e1;
+	background: #ba6e46;
+}
+
+.header__description {
+	color: #fcf0e1;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
